[tool.ruff]
target-version = "py39"
extend-select = ["I", "TRY"]

[tool.pytest.ini_options]
addopts = "--cov=testapp/ --cov-report=term-missing"
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ui: marks tests as ui tests (deselect with '-m \"not ui\"')",
]

[tool.isort]
profile = "black"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "testapp/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "black",
    "isort",
    "locust",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pre-commit",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-playwright",
    "pytest",
    "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-ui = "pytest -m ui"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "isort .",
  "black .",
  "ruff --fix .",
  "mypy testapp/",
]
lint-check = [
  "isort . --check-only",
  "black --check .",
  "ruff .",
  "mypy testapp/",
]
panel-serve = "panel serve eyesy-chat.py --allow-websocket-origin=*"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "param.*",
]
ignore_missing_imports = true

[project]
name = "testapp"
authors = [
  { name = "testapp", email = "owen@critterandguitari.com" }
]
description = "testapp"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "chromadb",
    "ctransformers",
    "hvplot",
    "langchain-experimental",
    "langchain",
    "matplotlib",
    "numexpr",
    "openai>1.0.0",
    "panel>=1.3.0",
    "plotly",
    "pypdf",
    "tabulate",
    "tiktoken",
    "mistralai",
    "langchain-openai",
]

[project.urls]
Source = "https://github.com/owenosborn/testapp"
